--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "es/index.js",
   "files": [
     "css",
+    "scss",
     "es",
     "lib",
     "umd"
@@ -19,14 +20,23 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
-  "peerDependencies": {
-    "react": "16.x"
+  "dependencies": {
+    "lodash": "^4.17.4",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.1"
   },
-  "devDependencies": {
-    "nwb": "0.23.x",
+  "peerDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "node-sass": "^4.12.0",
+    "nwb": "0.23.x",
+    "nwb-sass": "^0.9.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.31.0"
   },
   "author": "",
   "homepage": "",
