--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-trace-chart",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "react-trace-chart React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "nwb build-react-component",
     "clean": "nwb clean-module && nwb clean-demo",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run build -- --keep-proptypes --copy-files",
     "start": "nwb serve-react-demo",
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
@@ -23,11 +23,12 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "moment": "^2.22.2",
-    "prop-types": "^15.6.1"
+    "prop-types": "^15.6.1",
+    "node-sass": "^4.12.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6"    
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
