--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-trace-chart",
-  "version": "1.0.13",
+  "version": "1.0.15",
   "description": "react-trace-chart React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "nwb build-react-component",
     "clean": "nwb clean-module && nwb clean-demo",
-    "prepublishOnly": "npm run build -- --keep-proptypes --copy-files",
+    "prepublishOnly": "npm run build -- --keep-proptypes --copy-files --no-demo",
     "start": "nwb serve-react-demo",
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
