--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-trace-chart",
-  "version": "1.0.15",
+  "version": "1.0.19",
   "description": "react-trace-chart React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -41,6 +41,7 @@
     "react-dom": "^16.0.0",
     "react-json-view": "^1.19.1",
     "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.31.0"
   },
   "author": "",
