--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thundra-trace-chart",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "thundra-trace-chart react component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -24,9 +24,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.21",
     "moment": "^2.22.2",
-    "node-sass": "^4.12.0",
     "prop-types": "^15.6.1"
   },
   "peerDependencies": {
@@ -35,11 +34,11 @@
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
-    "nwb": "0.23.x",
+    "nwb": "^0.25.2",
     "nwb-sass": "^0.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-json-view": "^1.19.1",
+    "react-json-view": "^1.21.3",
     "sass-loader": "^7.1.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.31.0"
