--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-json-view": "^1.21.3",
     "sass-loader": "^7.1.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.31.0"
+    "webpack": "^4.31.0",
+    "prettier": "^2.2.1"
   },
   "author": "milkers",
   "homepage": "https://github.com/thundra-io/thundra-trace-chart",
