--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thundra-trace-chart",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "thundra-trace-chart react component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -50,7 +50,8 @@
     "sass-loader": "^7.1.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.31.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "release-it": "^14.5.0"
   },
   "author": "milkers",
   "homepage": "https://github.com/thundra-io/thundra-trace-chart",
