--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "thundra-trace-chart",
-  "version": "0.0.19",
+  "name": "thundra-trace-chart-forked",
+  "version": "0.0.2",
   "description": "thundra-trace-chart react component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -37,21 +37,20 @@
     "prop-types": "^15.6.1"
   },
   "peerDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "node-sass": "^4.12.0",
     "nwb": "^0.25.2",
-    "nwb-sass": "^0.9.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "nwb-sass": "^0.10.2",
+    "prettier": "^2.2.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-json-view": "^1.21.3",
+    "release-it": "^14.5.0",
     "sass-loader": "^7.1.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.31.0",
-    "prettier": "^2.2.1",
-    "release-it": "^14.5.0"
+    "webpack": "^4.31.0"
   },
   "author": "milkers",
   "homepage": "https://github.com/thundra-io/thundra-trace-chart",
