--- a/package.json
+++ b/package.json
@@ -1,66 +1,66 @@
 {
-  "name": "thundra-trace-chart-forked",
-  "version": "0.0.21",
-  "description": "thundra-trace-chart react component",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "files": [
-    "css",
-    "scss",
-    "es",
-    "lib",
-    "umd"
-  ],
-  "scripts": {
-    "build": "nwb build-react-component",
-    "clean": "nwb clean-module && nwb clean-demo",
-    "prepublishOnly": "npm run build -- --keep-proptypes --copy-files --no-demo",
-    "start": "nwb serve-react-demo",
-    "test": "nwb test-react",
-    "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server",
-    "lint": "prettier --config .prettierrc.json --write ./src/*.js",
-    "release-patch": "release-it --ci --git.commit --git.push --git.tag --git.tagName='v${version}' --github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
-    "release-minor": "release-it minor --ci --git.commit --git.push --git.tag --git.tagName='v${version}' --github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
-    "release-major": "release-it major --ci --git.commit --git.push --git.tag --git.tagName='v${version}' --github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
-    "release-patch-without-tag": "release-it --ci --no-git.commit --no-git.push --no-git.tag --no-git.tagName='v${version}' --no-github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
-    "release-minor-without-tag": "release-it minor --ci --no-git.commit --no-git.push --no-git.tag --no-git.tagName='v${version}' --no-github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
-    "release-major-without-tag": "release-it major --ci --no-git.commit --no-git.push --no-git.tag --no-git.tagName='v${version}' --no-github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
-    "release-dry-run": "release-it --dry-run --ci --no-git.commit --no-git.push --no-git.tag --no-git.tagName='v${version}' --no-github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --no-npm.publish"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.18",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "lodash": "^4.17.21",
-    "moment": "^2.22.2",
-    "prop-types": "^15.6.1"
-  },
-  "peerDependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "nwb": "^0.25.2",
-    "nwb-sass": "^0.10.2",
-    "prettier": "^2.2.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-json-view": "^1.21.3",
-    "release-it": "^14.5.0",
-    "sass-loader": "^7.1.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.31.0"
-  },
-  "author": "milkers",
-  "homepage": "https://github.com/thundra-io/thundra-trace-chart",
-  "license": "MIT",
-  "repository": "https://github.com/thundra-io/thundra-trace-chart",
-  "keywords": [
-    "react-component",
-    "trace chart",
-    "open tracing",
-    "zipkin",
-    "thundra"
-  ]
+    "name": "thundra-trace-chart",
+    "version": "0.1.0",
+    "description": "thundra-trace-chart react component",
+    "main": "lib/index.js",
+    "module": "es/index.js",
+    "files": [
+        "css",
+        "scss",
+        "es",
+        "lib",
+        "umd"
+    ],
+    "scripts": {
+        "build": "nwb build-react-component",
+        "clean": "nwb clean-module && nwb clean-demo",
+        "prepublishOnly": "npm run build -- --keep-proptypes --copy-files --no-demo",
+        "start": "nwb serve-react-demo",
+        "test": "nwb test-react",
+        "test:coverage": "nwb test-react --coverage",
+        "test:watch": "nwb test-react --server",
+        "lint": "prettier --config .prettierrc.json --write ./src/*.js",
+        "release-patch": "release-it --ci --git.commit --git.push --git.tag --git.tagName='v${version}' --github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
+        "release-minor": "release-it minor --ci --git.commit --git.push --git.tag --git.tagName='v${version}' --github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
+        "release-major": "release-it major --ci --git.commit --git.push --git.tag --git.tagName='v${version}' --github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
+        "release-patch-without-tag": "release-it --ci --no-git.commit --no-git.push --no-git.tag --no-git.tagName='v${version}' --no-github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
+        "release-minor-without-tag": "release-it minor --ci --no-git.commit --no-git.push --no-git.tag --no-git.tagName='v${version}' --no-github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
+        "release-major-without-tag": "release-it major --ci --no-git.commit --no-git.push --no-git.tag --no-git.tagName='v${version}' --no-github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --npm.publish --npm.skipChecks",
+        "release-dry-run": "release-it --dry-run --ci --no-git.commit --no-git.push --no-git.tag --no-git.tagName='v${version}' --no-github.release --no-git.requireCleanWorkingDir --no-git.requireUpstream --no-npm.publish"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.18",
+        "@fortawesome/free-solid-svg-icons": "^5.8.2",
+        "@fortawesome/react-fontawesome": "^0.1.4",
+        "lodash": "^4.17.21",
+        "moment": "^2.22.2",
+        "prop-types": "^15.6.1"
+    },
+    "peerDependencies": {
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0"
+    },
+    "devDependencies": {
+        "nwb": "^0.25.2",
+        "nwb-sass": "^0.10.2",
+        "prettier": "^2.2.1",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0",
+        "react-json-view": "^1.21.3",
+        "release-it": "^14.5.0",
+        "sass-loader": "^7.1.0",
+        "uglifyjs-webpack-plugin": "^2.1.3",
+        "webpack": "^4.31.0"
+    },
+    "author": "milkers,egemenhalici1",
+    "homepage": "https://github.com/thundra-io/thundra-trace-chart",
+    "license": "MIT",
+    "repository": "https://github.com/thundra-io/thundra-trace-chart",
+    "keywords": [
+        "react-component",
+        "trace chart",
+        "open tracing",
+        "zipkin",
+        "thundra"
+    ]
 }
