--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 4,
-  "semi": false,
-  "singleQuote": true
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "arrowParens": "avoid",
+    "singleQuote": true,
+    "printWidth": 120
 }
